--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ input[type='radio'] {
   display: flex;
   align-items: center;
   justify-content: right;
-  /* height: 2rem; */
+  overflow: hidden;
 }
 
 .buttons-grid {
