--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .app {
@@ -91,6 +91,7 @@ body {
   display: grid;
   grid-template-rows: .7fr .8fr 4.5fr;
   gap: .5rem;
+  padding: 2rem 0;
 }
 
 .heading {
@@ -224,8 +225,12 @@ input[type='radio'] {
 }
 
 @media only screen and (min-width: 768px) {
+  body {
+    height: 100vh;
+  }
   .app {
     max-width: 500px;
+    padding: 0;
   }
   .screen {
     height: 5rem;
